--- a/oferta_educativa.html
+++ b/oferta_educativa.html
@@ -23,7 +23,7 @@
 
         <!-- Header -->
 
-             <header class="header d-flex flex-row">
+        <header class="header d-flex flex-row">
             <div class="header_content d-flex flex-row align-items-center">
                 <!-- Logo -->
                 <div class="logo_container">
@@ -39,7 +39,7 @@
                             <li class="main_nav_item"><a href="index.html">Inicio</a></li>
                             <li class="main_nav_item"><a href="quienes_somos.html">Quiénes somos</a></li>
                             <li class="main_nav_item"><a href="oferta_educativa.html">Oferta educativa</a></li>
-                            <li class="main_nav_item"><a href="Pastoral.html">Pastoral</a></li>
+                            <li class="main_nav_item"><a href="pastoral.html">Pastoral</a></li>
                             <li class="main_nav_item"><a href="eventos.html">Eventos</a></li>
                             <li class="main_nav_item"><a href="contacto.html">Contacto</a></li>
                         </ul>
@@ -73,7 +73,7 @@
                         <li class="menu_item menu_mm"><a href="index.html">Inicio</a></li>
                         <li class="menu_item menu_mm"><a href="quienes_somos.html">Quiénes somos</a></li>
                         <li class="menu_item menu_mm"><a href="oferta_educativa.html">Oferta educativa</a></li>
-                        <li class="menu_item menu_mm"><a href="Pastoral.html">Pastoral</a></li>
+                        <li class="menu_item menu_mm"><a href="pastoral.html">Pastoral</a></li>
                         <li class="menu_item menu_mm"><a href="eventos.html">Eventos</a></li>
                         <li class="menu_item menu_mm"><a href="contacto.html">Contacto</a></li>
                     </ul>
@@ -94,7 +94,6 @@
             </div>
 
         </div>
-
 
         <!-- Home -->
 
@@ -369,8 +368,7 @@
                                 </a>
                             </div>
                             <div class="boton-container">
-                                <a class="botones-B" href="https://www.se.gob.hn/media/files/educmedia/documentos/doc/Bachillerato_en_Ciencias_y_Humanidades_BCH._VF-Enero_2015_rEHO8Lk.pdf"
-                                target="_blank">
+                                <a class="botones-B" href="https://www.se.gob.hn/media/files/educmedia/documentos/doc/Bachillerato_en_Ciencias_y_Humanidades_BCH._VF-Enero_2015_rEHO8Lk.pdf" target="_blank">
                                     <h3>Más información</h3>
                                 </a>
                             </div>
