--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -21,7 +21,7 @@
 
         <!-- Header -->
 
-       <header class="header d-flex flex-row">
+        <header class="header d-flex flex-row">
             <div class="header_content d-flex flex-row align-items-center">
                 <!-- Logo -->
                 <div class="logo_container">
@@ -37,7 +37,7 @@
                             <li class="main_nav_item"><a href="index.html">Inicio</a></li>
                             <li class="main_nav_item"><a href="quienes_somos.html">Quiénes somos</a></li>
                             <li class="main_nav_item"><a href="oferta_educativa.html">Oferta educativa</a></li>
-                            <li class="main_nav_item"><a href="Pastoral.html">Pastoral</a></li>
+                            <li class="main_nav_item"><a href="pastoral.html">Pastoral</a></li>
                             <li class="main_nav_item"><a href="eventos.html">Eventos</a></li>
                             <li class="main_nav_item"><a href="contacto.html">Contacto</a></li>
                         </ul>
@@ -71,7 +71,7 @@
                         <li class="menu_item menu_mm"><a href="index.html">Inicio</a></li>
                         <li class="menu_item menu_mm"><a href="quienes_somos.html">Quiénes somos</a></li>
                         <li class="menu_item menu_mm"><a href="oferta_educativa.html">Oferta educativa</a></li>
-                        <li class="menu_item menu_mm"><a href="Pastoral.html">Pastoral</a></li>
+                        <li class="menu_item menu_mm"><a href="pastoral.html">Pastoral</a></li>
                         <li class="menu_item menu_mm"><a href="eventos.html">Eventos</a></li>
                         <li class="menu_item menu_mm"><a href="contacto.html">Contacto</a></li>
                     </ul>
@@ -92,7 +92,6 @@
             </div>
 
         </div>
-
 
         <!-- Home -->
 
