--- a/eventos.html
+++ b/eventos.html
@@ -36,8 +36,8 @@
                         <ul class="main_nav_list">
                             <li class="main_nav_item"><a href="index.html">Inicio</a></li>
                             <li class="main_nav_item"><a href="quienes_somos.html">Quiénes somos</a></li>
-                            <li class="main_nav_item"><a href="Oferta_educativa.html">Oferta educativa</a></li>
-                            <li class="main_nav_item"><a href="Pastoral.html">Pastoral</a></li>
+                            <li class="main_nav_item"><a href="oferta_educativa.html">Oferta educativa</a></li>
+                            <li class="main_nav_item"><a href="pastoral.html">Pastoral</a></li>
                             <li class="main_nav_item"><a href="eventos.html">Eventos</a></li>
                             <li class="main_nav_item"><a href="contacto.html">Contacto</a></li>
                         </ul>
@@ -70,8 +70,8 @@
                     <ul class="menu_list menu_mm">
                         <li class="menu_item menu_mm"><a href="index.html">Inicio</a></li>
                         <li class="menu_item menu_mm"><a href="quienes_somos.html">Quiénes somos</a></li>
-                        <li class="menu_item menu_mm"><a href="Oferta_educativa.html">Oferta educativa</a></li>
-                        <li class="menu_item menu_mm"><a href="Pastoral.html">Pastoral</a></li>
+                        <li class="menu_item menu_mm"><a href="oferta_educativa.html">Oferta educativa</a></li>
+                        <li class="menu_item menu_mm"><a href="pastoral.html">Pastoral</a></li>
                         <li class="menu_item menu_mm"><a href="eventos.html">Eventos</a></li>
                         <li class="menu_item menu_mm"><a href="contacto.html">Contacto</a></li>
                     </ul>
@@ -80,12 +80,9 @@
 
                     <div class="menu_social_container menu_mm">
                         <ul class="menu_social menu_mm">
-                            <li class="menu_social_item menu_mm"><a href="https://www.instagram.com/isvphn/"><i
-                                        class="fab fa-instagram"></i></a></li>
-                            <li class="menu_social_item menu_mm"><a href="https://twitter.com/svphn?lang=es"><i
-                                        class="fab fa-twitter"></i></a></li>
-                            <li class="menu_social_item menu_mm"><a href="https://www.facebook.com/svphn/"><i
-                                        class="fab fa-facebook-f"></i></a></li>
+                            <li class="menu_social_item menu_mm"><a href="https://www.instagram.com/isvphn/"><i class="fab fa-instagram"></i></a></li>
+                            <li class="menu_social_item menu_mm"><a href="https://twitter.com/svphn?lang=es"><i class="fab fa-twitter"></i></a></li>
+                            <li class="menu_social_item menu_mm"><a href="https://www.facebook.com/svphn/"><i class="fab fa-facebook-f"></i></a></li>
                         </ul>
                     </div>
 
