--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                         <ul class="main_nav_list">
                             <li class="main_nav_item"><a href="index.html">Inicio</a></li>
                             <li class="main_nav_item"><a href="quienes_somos.html">Quiénes somos</a></li>
-                            <li class="main_nav_item"><a href="Oferta_educativa.html">Oferta educativa</a></li>
-                            <li class="main_nav_item"><a href="Pastoral.html">Pastoral</a></li>
+                            <li class="main_nav_item"><a href="oferta_educativa.html">Oferta educativa</a></li>
+                            <li class="main_nav_item"><a href="pastoral.html">Pastoral</a></li>
                             <li class="main_nav_item"><a href="eventos.html">Eventos</a></li>
                             <li class="main_nav_item"><a href="contacto.html">Contacto</a></li>
                         </ul>
@@ -78,8 +78,8 @@
                     <ul class="menu_list menu_mm">
                         <li class="menu_item menu_mm"><a href="index.html">Inicio</a></li>
                         <li class="menu_item menu_mm"><a href="quienes_somos.html">Quiénes somos</a></li>
-                        <li class="menu_item menu_mm"><a href="Oferta_educativa.html">Oferta educativa</a></li>
-                        <li class="menu_item menu_mm"><a href="Pastoral.html">Pastoral</a></li>
+                        <li class="menu_item menu_mm"><a href="oferta_educativa.html">Oferta educativa</a></li>
+                        <li class="menu_item menu_mm"><a href="pastoral.html">Pastoral</a></li>
                         <li class="menu_item menu_mm"><a href="eventos.html">Eventos</a></li>
                         <li class="menu_item menu_mm"><a href="contacto.html">Contacto</a></li>
                     </ul>
