--- a/contacto.html
+++ b/contacto.html
@@ -35,9 +35,9 @@
                     <div class="main_nav">
                         <ul class="main_nav_list">
                             <li class="main_nav_item"><a href="index.html">Inicio</a></li>
-                            <li class="main_nav_item"><a href="Quienes_somos.html">Quiénes somos</a></li>
-                            <li class="main_nav_item"><a href="Oferta_educativa.html">Oferta educativa</a></li>
-                            <li class="main_nav_item"><a href="Pastoral.html">Pastoral</a></li>
+                            <li class="main_nav_item"><a href="quienes_somos.html">Quiénes somos</a></li>
+                            <li class="main_nav_item"><a href="oferta_educativa.html">Oferta educativa</a></li>
+                            <li class="main_nav_item"><a href="pastoral.html">Pastoral</a></li>
                             <li class="main_nav_item"><a href="eventos.html">Eventos</a></li>
                             <li class="main_nav_item"><a href="contacto.html">Contacto</a></li>
                         </ul>
@@ -69,9 +69,9 @@
                 <div class="menu menu_mm">
                     <ul class="menu_list menu_mm">
                         <li class="menu_item menu_mm"><a href="index.html">Inicio</a></li>
-                        <li class="menu_item menu_mm"><a href="Quienes_somos.html">Quiénes somos</a></li>
-                        <li class="menu_item menu_mm"><a href="Oferta_educativa.html">Oferta educativa</a></li>
-                        <li class="menu_item menu_mm"><a href="Pastoral.html">Pastoral</a></li>
+                        <li class="menu_item menu_mm"><a href="quienes_somos.html">Quiénes somos</a></li>
+                        <li class="menu_item menu_mm"><a href="oferta_educativa.html">Oferta educativa</a></li>
+                        <li class="menu_item menu_mm"><a href="pastoral.html">Pastoral</a></li>
                         <li class="menu_item menu_mm"><a href="eventos.html">Eventos</a></li>
                         <li class="menu_item menu_mm"><a href="contacto.html">Contacto</a></li>
                     </ul>
