--- a/index.html
+++ b/index.html
@@ -191,8 +191,9 @@
                                 </div>
                             </div>
                         </div>
+			    <a href="nuestras_instalaciones.html">
                         <div class="col-lg-4 hero_box_col">
-                            <a href="courses.html">
+                            
                                 <div class="hero_box d-flex flex-row align-items-center justify-content-start">
                                     <img src="images/colegio.svg" class="svg" alt="">
                                     <div class="hero_box_content">
@@ -200,8 +201,9 @@
                                         <a href="nuestras_instalaciones.html" class="hero_box_link">ver más</a>
                                     </div>
                                 </div>
-                            </a>
-                        </div>
+                            
+                        	</div>
+			</a>
                         <div class="col-lg-4 hero_box_col">
                             <a href="docentes.html">
                                 <div class="hero_box d-flex flex-row align-items-center justify-content-start">
