--- a/contacto.html
+++ b/contacto.html
@@ -35,9 +35,9 @@
                     <div class="main_nav">
                         <ul class="main_nav_list">
                             <li class="main_nav_item"><a href="index.html">Inicio</a></li>
-                            <li class="main_nav_item"><a href="quienes_somos.html">Quiénes somos</a></li>
-                            <li class="main_nav_item"><a href="oferta_educativa.html">Oferta educativa</a></li>
-                            <li class="main_nav_item"><a href="pastoral.html">Pastoral</a></li>
+                            <li class="main_nav_item"><a href="Quienes_somos.html">Quiénes somos</a></li>
+                            <li class="main_nav_item"><a href="Oferta_educativa.html">Oferta educativa</a></li>
+                            <li class="main_nav_item"><a href="Pastoral.html">Pastoral</a></li>
                             <li class="main_nav_item"><a href="eventos.html">Eventos</a></li>
                             <li class="main_nav_item"><a href="contacto.html">Contacto</a></li>
                         </ul>
@@ -69,9 +69,9 @@
                 <div class="menu menu_mm">
                     <ul class="menu_list menu_mm">
                         <li class="menu_item menu_mm"><a href="index.html">Inicio</a></li>
-                        <li class="menu_item menu_mm"><a href="quienes_somos.html">Quiénes somos</a></li>
-                        <li class="menu_item menu_mm"><a href="oferta_educativa.html">Oferta educativa</a></li>
-                        <li class="menu_item menu_mm"><a href="pastoral.html">Pastoral</a></li>
+                        <li class="menu_item menu_mm"><a href="Quienes_somos.html">Quiénes somos</a></li>
+                        <li class="menu_item menu_mm"><a href="Oferta_educativa.html">Oferta educativa</a></li>
+                        <li class="menu_item menu_mm"><a href="Pastoral.html">Pastoral</a></li>
                         <li class="menu_item menu_mm"><a href="eventos.html">Eventos</a></li>
                         <li class="menu_item menu_mm"><a href="contacto.html">Contacto</a></li>
                     </ul>
@@ -210,7 +210,7 @@
                             <!-- Logo -->
 
                             <div class="logo-footer-svg">
-                                <img src="images/logo_footer.png" alt="">
+                                <img class="imagen-footer" src="images/logo-footer.png" alt="">
                             </div>
 
                         </div>
@@ -303,7 +303,7 @@
     </div>
 
     <!--Botón Arriba-->
-    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img src="images/flecha.png">
+    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img class="boton_arriba" src="images/flecha.png">
         <script src="js/simplescrollup.js"></script>
 
         <script src="js/jquery-3.2.1.min.js"></script>
