--- a/eventos.html
+++ b/eventos.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-    <title>San Vicente de Paúl - Quienes somos</title>
+    <title>San Vicente de Paúl - Eventos</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="images/favicon1.ico">
@@ -11,8 +11,8 @@
     <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
     <link href="plugins/fontawesome-free-5.0.1/css/fontawesome-all.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="styles/General_Styles.css">
-    <link rel="stylesheet" type="text/css" href="styles/proximamente_styles.css">
-    <link rel="stylesheet" type="text/css" href="styles/proximamente_responsive.css">
+    <link rel="stylesheet" type="text/css" href="styles/eventos_styles.css">
+    <link rel="stylesheet" type="text/css" href="styles/eventos_responsive.css">
 </head>
 
 <body>
@@ -135,7 +135,7 @@
                             <!-- Logo -->
 
                             <div class="logo-footer-svg">
-                                <img src="images/logo_footer.png" alt="">
+                                <img class="imagen-footer" src="images/logo-footer.png" alt="">
                             </div>
 
                         </div>
@@ -229,7 +229,7 @@
     </div>
 
     <!--Botón Arriba-->
-    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img src="images/flecha.png">
+    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img class="boton_arriba" src="images/flecha.png">
         <script src="js/simplescrollup.js"></script>
 
         <script src="js/jquery-3.2.1.min.js"></script>
