--- a/index.html
+++ b/index.html
@@ -181,19 +181,21 @@
                     <div class="row">
 
 
+                        <div class="col-lg-4 hero_box_col">
+                            <a href="https://www.flickr.com/photos/190693188@N06/albums">
+                                <div class="hero_box d-flex flex-row align-items-center justify-content-start">
+                                    <img src="images/galeria.svg" class="svg" alt="">
+                                    <div class="hero_box_content">
+                                        <h2 class="hero_box_title">Galería Vicentina</h2>
+                                        <a href="https://www.flickr.com/photos/190693188@N06/albums" class="hero_box_link">ver más</a>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
 
                         <div class="col-lg-4 hero_box_col">
-                            <div class="hero_box d-flex flex-row align-items-center justify-content-start">
-                                <img src="images/galeria.svg" class="svg" alt="">
-                                <div class="hero_box_content">
-                                    <h2 class="hero_box_title">Galería Vicentina</h2>
-                                    <a href="https://www.flickr.com/photos/190693188@N06/albums" class="hero_box_link">ver más</a>
-                                </div>
-                            </div>
-                        </div>
-			    <a href="nuestras_instalaciones.html">
-                        <div class="col-lg-4 hero_box_col">
-                            
+                            <a href="nuestras_instalaciones.html">
                                 <div class="hero_box d-flex flex-row align-items-center justify-content-start">
                                     <img src="images/colegio.svg" class="svg" alt="">
                                     <div class="hero_box_content">
@@ -201,9 +203,8 @@
                                         <a href="nuestras_instalaciones.html" class="hero_box_link">ver más</a>
                                     </div>
                                 </div>
-                            
-                        	</div>
-			</a>
+                            </a>
+                        </div>
                         <div class="col-lg-4 hero_box_col">
                             <a href="docentes.html">
                                 <div class="hero_box d-flex flex-row align-items-center justify-content-start">
@@ -244,7 +245,7 @@
 
 
                             <div class="container_texto_encima">
-                                <img class="card-img-top" src="images/mision.jpg" alt="https://unsplash.com/@kellybrito">
+                                <img class="card-img-top" src="images/Mision.jpg" alt="https://unsplash.com/@kellybrito">
                                 <div class="texto_encima">
                                     <strong>Somos una institución educativa católica dedicada a la formación integral de jóvenes en la ciencia, fe, tecnología y justicia; capaces de trascender por sus competencias y valores, en un ámbito humano que demande su desempeño.</strong>
                                 </div>
@@ -667,35 +668,6 @@
                         </div>
                     </div>
 
-                    <!-- Event Item -->
-                    <div class="row event_item">
-                        <div class="col">
-                            <div class="row d-flex flex-row align-items-end">
-
-                                <div class="col-lg-2 order-lg-1 order-2">
-                                    <div class="event_date d-flex flex-column align-items-center justify-content-center">
-                                        <div class="event_day">??</div>
-                                        <div class="event_month">Mes</div>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-6 order-lg-2 order-3">
-                                    <div class="event_content">
-                                        <div class="event_name"><a class="trans_200" href="index.html">Proximamente</a></div>
-                                        <div class="event_location">Ubicación</div>
-                                        <p>In aliquam, augue a gravida rutrum, ante nisl fermentum nulla, vitae tempor nisl ligula vel nunc. Proin quis mi malesuada, finibus tortor.</p>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-4 order-lg-3 order-1">
-                                    <div class="event_image">
-                                        <img src="images/Evento-3.jpg" alt="https://unsplash.com/@juanmramosjr">
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
 
                 </div>
 
@@ -736,7 +708,7 @@
                             <!-- Logo -->
 
 
-                            <img src="images/logo_footer.png">
+                            <img class="imagen-footer" src="images/logo-footer.png">
 
 
                         </div>
@@ -824,7 +796,7 @@
     </div>
 
     <!--Botón Arriba-->
-    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img src="images/flecha.png">
+    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img class="boton_arriba" src="images/flecha.png">
         <script src="js/simplescrollup.js"></script>
 
         <script src="js/jquery-3.2.1.min.js"></script>
