--- a/nuestras_instalaciones.html
+++ b/nuestras_instalaciones.html
@@ -329,7 +329,7 @@
                             <!-- Logo -->
 
                             <div class="logo-footer-svg">
-                                <img src="images/logo_footer.png" alt="">
+                                <img class="imagen-footer" src="images/logo-footer.png" alt="">
                             </div>
 
                         </div>
@@ -421,7 +421,7 @@
     </div>
 
     <!--Botón Arriba-->
-    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img src="images/flecha.png">
+    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img class="boton_arriba" src="images/flecha.png">
         <script src="js/simplescrollup.js"></script>
 
         <script src="js/jquery-3.2.1.min.js"></script>
