--- a/oferta_educativa.html
+++ b/oferta_educativa.html
@@ -486,7 +486,7 @@
                             <!-- Logo -->
 
 
-                            <img src="images/logo_footer.png" alt="">
+                            <img class="imagen-footer" src="images/logo-footer.png" alt="">
 
 
                         </div>
@@ -580,7 +580,7 @@
     </div>
 
     <!--Botón Arriba-->
-    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img src="images/flecha.png">
+    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img class="boton_arriba" src="images/flecha.png">
         <script src="js/simplescrollup.js"></script>
 
         <script src="js/jquery-3.2.1.min.js"></script>
