--- a/pastoral.html
+++ b/pastoral.html
@@ -117,8 +117,10 @@
 
                         <p>La misión de la pastoral educativa es promover el encuentro personal y comunitario con el proyecto de Jesús, en pro de la construcción del reino de Dios en la escuela, mediante la valoración crítica de las culturas, el diálogo
                             “FE-RAZÓN”, el impulso a una educación fundamentada en el evangelio y la formación de líderes comprometidos en la transformación de la sociedad.</p>
+                        <div class="titulo">
+                            <h1><strong>Educación en la Fe</strong></h1>
+                        </div>
 
-                        <h2>Educación en la Fe</h2>
                         <p>Logramos un espacio de encuentro con el Señor Jesús, por medio de la Oración comunitaria en el aula de clases, ofrecemos servicios de Eucaristía periódicamente, sacramentos y retiros a los estudiantes y docentes como espacios para
                             el Encuentro con Dios y la comunidad educativa. Educamos a los alumnos y alumnas en la fe a través de la clase de Orientación Cristiana, el catecismo de la Iglesia Católica y documentos eclesiales.
                         </p>
@@ -302,7 +304,7 @@
                         <!-- Logo -->
 
 
-                        <img src="images/logo_footer.png" alt="">
+                        <img class="imagen-footer" src="images/logo-footer.png" alt="">
 
                     </div>
 
@@ -395,7 +397,7 @@
     </div>
 
     <!--Botón Arriba-->
-    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img src="images/flecha.png">
+    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img class="boton_arriba" src="images/flecha.png">
         <script src="js/simplescrollup.js"></script>
 
         <script src="js/jquery-3.2.1.min.js"></script>
