--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -110,7 +110,7 @@
 
             <!--Seccion quienes somos-->
             <div class="fondo-diapositiva" style="background-image: url(images/Background-informacion.jpg);">
-                <div class="diapositiva row" style="background-color: #4ba700;">
+                <div class="diapositiva row" style="background-color: #1b8500;">
 
                     <div class="col-xl-6 col-sm-11 texto-diapositiva">
                         <div class="quienes_somos" style="padding-top: 30px;">
@@ -138,29 +138,6 @@
                 </div>
             </div>
         </div>
-
-        <div style="background-color: #b80000;" class="seccion-perfil">
-            <div class="row">
-                <div class="texto-diapositiva col-sm-11 col-xl-6">
-                    <div class="contenido-texto">
-                        <div class="contenido-titulo">
-                            <h1><strong>¿Qué es ser Vicentino?</strong></h1>
-                        </div>
-                        <p> Ser Vicentino es mas que estudiar en un colegio y graduarse, ser Vicentino tiene un significado tan alto, que llamarlo estudios se quedaría corto, ser Vicentino es una huella que queda en tu corazón para toda una vida, ser Vicentino
-                            significa que eres una persona con Valores, que has sido forjado bajo el fuego de la Rectitud, y formado con principios que abrazan la humanidad.</p>
-                        <br>
-                        <p>Los vicentinos tomamos las cosas buenas y las convertimos en superiores, porque nuestra mayor influencia es Nuestro Señor Jesucristo, quién siempre supo qué hacer ante el bien y el mal, dejando claro que no doblegaba sus principios
-                            ni su fé incluso ante la muerte. Por eso los Vicentinos somos diferentes, más que alumnos, somos pupilos, sucesores del legado de los discípulos.</p>
-                        <Br>
-                        <p>Actuamos con Honestidad y rectitud, procurando siempre el bien hacia el prójimo, demostrando lo que llevamos en nuestro corazón y en nuestra mente. Somos estudiantes por pocos años, ¡pero Vicentinos para toda una vida!</p>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-xl-6" style="padding: 0;">
-                    <img class="imagen-vicentino" src="images/ser_vicentino.jpg" alt="">
-                </div>
-            </div>
-        </div>
-
         <div id="recipeCarousel" class="slider-bil carousel slide w-100" data-ride="carousel" style="border-top: 10px solid #ffffff;border-bottom: 10px solid #ffffff;">
             <div class="carousel-inner w-100" role="listbox">
                 <div class="carousel-item row no-gutters active">
@@ -219,6 +196,29 @@
             </a>
         </div>
 
+        <div style="background-color: #b80000;" class="seccion-perfil">
+            <div class="row">
+                <div class="texto-diapositiva col-sm-11 col-xl-6">
+                    <div class="contenido-texto">
+                        <div class="contenido-titulo">
+                            <h1><strong>¿Qué es ser Vicentino?</strong></h1>
+                        </div>
+                        <p> Ser Vicentino es mas que estudiar en un colegio y graduarse, ser Vicentino tiene un significado tan alto, que llamarlo estudios se quedaría corto, ser Vicentino es una huella que queda en tu corazón para toda una vida, ser Vicentino
+                            significa que eres una persona con Valores, que has sido forjado bajo el fuego de la Rectitud, y formado con principios que abrazan la humanidad.</p>
+
+                        <p>Los vicentinos tomamos las cosas buenas y las convertimos en superiores, porque nuestra mayor influencia es Nuestro Señor Jesucristo, quién siempre supo qué hacer ante el bien y el mal, dejando claro que no doblegaba sus principios
+                            ni su fé incluso ante la muerte. Por eso los Vicentinos somos diferentes, más que alumnos, somos pupilos, sucesores del legado de los discípulos.</p>
+
+                        <p>Actuamos con Honestidad y rectitud, procurando siempre el bien hacia el prójimo, demostrando lo que llevamos en nuestro corazón y en nuestra mente. Somos estudiantes por pocos años, ¡pero Vicentinos para toda una vida!</p>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-xl-6" style="padding: 0;">
+                    <img class="imagen-vicentino" src="images/ser_vicentino.jpg" alt="">
+                </div>
+            </div>
+        </div>
+
+
         <!--Seccion Historia-->
         <div class="seccion-historia">
             <div class="row">
@@ -229,7 +229,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-12 col-lg-6">
+                <div class="col-md-12 col-lg-6 texto-diapositiva">
 
                     <div class="contenido-texto">
 
@@ -243,20 +243,14 @@
                             educativas se iniciaron en la antigua calle del centro de San Pedro Sula. El primer edificio contaba con las piezas necesarias para los primeros cursos de normal, bachillerato, comercio, secretariado comercial, mas otras para
                             la dirección, mecanografía, música y reuniones.</p>
 
-
-
-
-
                         <p>Esperando un crecimiento, el colegio buscó otro local para el siguiente año. En 1954 se dejó el local de la calle del centro y se trasladó a la parte alta del edificio Golstein, en el pasaje José Cecilio del Valle, se matricularon
                             190 alumnas. De nuevo, la institución debía cambiar de local y establecerse, así se trasladaron al local que anteriormente era el Hotel Internacional, que sirvió como alojamiento para la institución por varios años. Este mismo
                             año, en la zona residencial del Boulevard Morazán, se inauguró un internado con más de 20 señoritas, el proyecto fue un éxito. Para 1955 se matricularon 280 alumnas. Al finalizar el año se ocupó todo el edificio para albergar
                             al creciente número de alumnas. Su nuevo edificio fue inaugurado en 1959.</p>
 
-
-
                     </div>
                 </div>
-                <div class="col-md-12 col-lg-6">
+                <div class="col-md-12 col-lg-6 texto-diapositiva">
                     <div class="row ">
                         <div class="contenido-texto">
                             <p>
@@ -417,7 +411,7 @@
 
                         <!-- Logo -->
 
-                        <img src="images/logo_footer.png" alt="">
+                        <img class="imagen-footer" src="images/logo-footer.png" alt="">
 
                     </div>
 
@@ -510,7 +504,7 @@
     </div>
 
     <!--Botón Arriba-->
-    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img src="images/flecha.png">
+    <a href="#up" class="simplescrollup__button simplescrollup__button--hide"><img class="boton_arriba" src="images/flecha.png">
         <script src="js/simplescrollup.js"></script>
 
         <script src="js/jquery-3.2.1.min.js"></script>
