--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
 
                             <div class="container_texto_encima">
-                                <img class="card-img-top" src="images/Mision.jpg" alt="https://unsplash.com/@kellybrito">
+                                <img class="card-img-top" src="images/mision.jpg" alt="https://unsplash.com/@kellybrito">
                                 <div class="texto_encima">
                                     <strong>Somos una institución educativa católica dedicada a la formación integral de jóvenes en la ciencia, fe, tecnología y justicia; capaces de trascender por sus competencias y valores, en un ámbito humano que demande su desempeño.</strong>
                                 </div>
